# LIS-book-scanner

./: .gitignore  .replit  DEPLOYMENT.md  DEPLOYMENT_FIX.md  Dockerfile  LICENSE  README.md  REPLIT_DEPLOY.md  app.html  catalog.db  docker-compose.yml  index.html  main.py  pyproject.toml  replit.nix  requirements.txt  requirements_replit.txt  setup_replit.sh  upload_to_github.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
client-side/: README.md  deploy.bat  deploy.sh  index.html  test-local.bat
exports/: catalog.marcxml
ml-research/: LIS_OCR_Project.ipynb  README.md  start-jupyter.bat
server-side/: Dockerfile  README.md  app.py  app_fixed.py  app_production.py  catalog.db  requirements_minimal.txt  run.bat  test-local.bat  test_production.py  upload-test-guide.html
server-side/static/: manifest.json
server-side/static/temp_uploads/: .gitkeep
server-side/templates/: analytics.html  index.html  results.html
server-side/uploads/: .gitkeep
web_app/: requirements.txt  start_production.bat
web_app/static/: style.css
web_app/templates/: database.html
